Add muitas coisas

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <p>© Artur Barichello, Lucas Verdade & Lucas Zacchi. This software is not intended for educational uses</p>
   </div>
 
+  <script src="utils.js"></script>
   <script src="actions.js"></script>
   <script src="automata.js"></script>
   <script src="draw.js"></script>
@@ -162,9 +163,10 @@
   <script src="regexp.js"></script>
 
   <script src="algorithms/afd-gr.js"></script>
-  <script src="algorithms/er-afd.js"></script>
   <script src="algorithms/closure.js"></script>
+  <script src="algorithms/complement.js"></script>
   <script src="algorithms/concat.js"></script>
+  <script src="algorithms/er-afd.js"></script>
   <script src="algorithms/intersection.js"></script>
   <script src="algorithms/nfa.js"></script>
   <script src="algorithms/union.js"></script>
