--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
         var editor = ace.edit("editor");
         editor.setTheme("ace/theme/tomorrow_night");
         editor.session.setMode("ace/mode/json");
-        editor.session.setValue("Initialazing...");
+        editor.session.setValue("Loading...");
 
         var editor2 = ace.edit("editor2");
         editor2.setTheme("ace/theme/tomorrow_night");
         editor2.session.setMode("ace/mode/json");
-        editor2.session.setValue("Initialazing...");
+        editor2.session.setValue("Loading...");
       </script>
     </div>
 
@@ -186,6 +186,7 @@
   <script src="algorithms/complement.js"></script>
   <script src="algorithms/concat.js"></script>
   <script src="algorithms/er-afd.js"></script>
+  <script src="algorithms/factor.js"></script>
   <script src="algorithms/intersection.js"></script>
   <script src="algorithms/nfa.js"></script>
   <script src="algorithms/union.js"></script>
