[E4] feature: add factor front-end.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           <div id="concat-button" style="display: block">
             <a class="btn btn-secondary" href="#" onclick="applyBinaryOperation(concatenation)">Concatenação</a>
           </div>
+          <div id="factor-button" style="display: block">
+            <a class="btn btn-secondary" href="#" onclick="handleFactorButton(activeJSON())">Fatorar Gramática</a>
+          </div>
           <div id="kleene-button" style="display: block">
             <a class="btn btn-secondary" href="#" onclick="closure(activeJSON(), true)">* Fecho</a>
           </div>
